<resources>
    <string name="app_name">SpeedyCart</string>
    <string name="email_textview_login_screen_text">E-mail</string>
    <string name="password_textview_login_screen_text">Mot de passe</string>
    <string name="forgetpasswordink_tewtview_login_screen_text">Mot de passe oublié?</string>
    <string name="login_button_login_screen_text">Se connecter</string>
    <string name="signup_textview_login_screen_text">Pas encore de compte ?</string>
    <string name="signuplink_textview_login_screen_text">Inscrivez-vous</string>
    <string name="email_textview_signup_screen_text">Email</string>
    <string name="password_textview_signup_screen_text">Mot de passe</string>
    <string name="passwordretype_textview_signup_screen_text">Entrez à nouveau le mot de passe</string>
    <string name="usertype_textview_signup_screen_text">Vous êtes :</string>
    <string name="title_textview_signup_screen_text">Inscription</string>
    <string name="button_client_signup_screen_text">S\'enregistrer en tant que client</string>
    <string name="title_textview_userinfo_screen_text">Mon compte client</string>
    <string name="lastname_textview_userinfo_screen_text">Nom :</string>
    <string name="firstname_textview_userinfo_screen_text">Prénom :</string>
    <string name="mail_textview_userinfo_screen_text">E-mail :</string>
    <string name="modify_button_userinfo_screen_text">Modifier des informations</string>
    <string name="delete_button_userinfo_screen_text">Supprimer le compte</string>
    <string name="loading">Loading…</string>
    <string name="error">Error</string>
    <string name="search_button">Recherche</string>
    <string name="shop_main_textview_text">Magasins à proximité</string>
    <string name="product_main_textview_text">Produits qui pourraient vous interresser</string>
    <string name="button_shop_signup_screen_text">S\'enregistrer en tant que vendeur/magasin</string>
    <string name="button_delivery_person_signup_screen_text">S\'enregistrer en tant que livreur</string>
    <string name="title_client_signup_screen_textview_text">Inscription</string>
    <string name="lastname_textview_client_signup_screen_text">Nom de famille</string>
    <string name="firstname_textview_client_signup_screen_text">Prénom</string>
    <string name="dob_textview_client_signup_screen_text">Date de naissance</string>
    <string name="adress_number_textview_client_signup_screen_text">Numéro</string>
    <string name="adress_name_textview_client_signup_screen_text">Nom d\'adresse</string>
    <string name="postal_code_textview_client_signup_screen_text">Code postale</string>
    <string name="city_textview_client_signup_screen_text">Commune</string>
    <string name="create_button_client_signup_screen_text">Créer le compte</string>
    <string name="dob_button_client_signup_screen_text">Choisir une date</string>
    <string name="title_shop_signup_screen_textview_text">Inscription</string>
    <string name="name_textview_shop_signup_screen_text">Nom du vendeur/magasin</string>
    <string name="description_textview_shop_signup_screen_text">Description</string>
    <string name="siret_textview_shop_signup_screen_text">Numéro de SIRET</string>
    <string name="address_number_textview_shop_signup_screen_text">Numéro</string>
    <string name="address_name_textview_shop_signup_screen_text">Nom d\'adresse</string>
    <string name="postal_code_textview_shop_signup_screen_text">Code postale</string>
    <string name="city_textview_shop_signup_screen_text">Commune</string>
    <string name="create_button_shop_signup_screen_text">Créer le compte</string>
    <string name="title_textview_deliveryperson_signup_screen_text">Inscription</string>
    <string name="lastname_textview_deliveryperson_signup_screen_text">Nom de famille</string>
    <string name="firstname_textview_deliveryperson_signup_screen_text">Prénom</string>
    <string name="dob_textview_deliveryperson_signup_screen_text">Date de naissance</string>
    <string name="dob_button_deliveryperson_signup_screen_text">Choisir une date</string>
    <string name="adress_number_textview_deliveryperson_signup_screen_text">Numéro</string>
    <string name="adress_name_textview_deliveryperson_signup_screen_text">Nom d\'adresse</string>
    <string name="postal_code_textview_deliveryperson_signup_screen_text">Code postale</string>
    <string name="city_textview_deliveryperson_signup_screen_text">Commune</string>
    <string name="create_button_deliveryperson_signup_screen_text">Créer le compte</string>
    <string name="vehicle_textview_deliveryperson_signup_screen_text">Véhicule</string>
    <string name="home_button_description">home button</string>
    <string name="cart_button_description">cart button</string>
    <string name="profil_button_decription">profil button</string>
    <string name="shop_display_description_text">magasin de vente de proximité</string>
    <string name="shop_display_address_text">34 rue de feuille</string>
    <string name="shop_display_title_text">Intermarché</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview_fragment_product_empty_text">Une erreur est survenue lors du chargement</string>
    <string name="empty_shop_fragment_text">une erreur est survenue lors du chargement</string>
    <string name="logout_button_description">logout button</string>
    <string name="client_account_title">Votre Compte Client</string>
    <string name="admin_account_title">Votre Compte Admin</string>
    <string name="shop_account_title">Votre Compte Boutique</string>
    <string name="delivery_person_account_title">Votre Compte Livreur</string>
    <string name="name_textview_shop_cart_screen_text">Nom du destinataire</string>
    <string name="adresse_textview_shop_cart_screen_text">Adresse de livraison</string>
    <string name="product_list_textview_shop_cart_screen_text">Produits dans le panier</string>
    <string name="payment_button_shop_cart_screen_text">Payer</string>
    <string name="description_title_textview_product_display_text">Description</string>
    <string name="add_button_product_display_text">Ajouter au panier</string>
    <string name="textview_delivery_list_screen_text">Livraisons en attentes</string>
    <string name="empty_delivery_list_textview_text">Une erreur de chargement est survenue</string>
    <string name="title_textview_delivery_details_screen_text">Informations sur la livraison</string>
    <string name="title_list_textview_delivery_details_screen_text">Produits dans la livraison</string>
    <string name="button_delivery_details_screen_text">Accepter la livraison</string>
    <string name="product_image_description">product image</string>
    <string name="shop_image_description">Shop image</string>
    <string name="details_delivery_information_magasin_tilte">Information Magasin</string>
    <string name="details_delivery_information_client_title">Information Client</string>
    <string name="commande_livre_button">Commande livrée</string>
    <string name="statue_commande_text">Statue commande</string>
    <string name="fragment_shop_order_empty_text">Auncune commande trouvée</string>
    <string name="shop_delivery_order_waiting_title">Commande en attente</string>
    <string name="title_textview_shop_order_details_text">Details de la Commande</string>
    <string name="title_list_textview_shop_order_details_text">Produits commandés</string>
    <string name="button_shop_order_details_text">Commande prete</string>
    <string name="shop_order_details_information_delivery_person_tilte">Informations Livreur</string>
    <string name="step_1_title_delivery_status_screen_text">Votre commande à été reçu par notre service</string>
    <string name="button_delivery_status_screen_text">J\'ai reçu ma commande</string>
</resources>