<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2CCED2"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/login_screen_imageview"
        android:layout_width="150dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:srcCompat="@drawable/logo"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/login_screen_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SpeedyCart"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="295dp"
        android:background="@drawable/rounded_dark_grey_rectangle"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_title_textview"
        app:layout_constraintVertical_bias="0.677">

        <EditText
            android:id="@+id/login_screen_mail_edittext"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_white_rectangle"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_screen_email_textview"
            tools:text="email@texst;fr" />

        <TextView
            android:id="@+id/login_screen_email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/email_textview_login_screen_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_screen_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password_textview_login_screen_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_screen_mail_edittext" />

        <EditText
            android:id="@+id/login_screen_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="112dp"
            android:background="@drawable/rounded_white_rectangle"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_screen_password_textview"
            app:layout_constraintVertical_bias="0.916"
            tools:text="password" />

        <TextView
            android:id="@+id/login_screen_forgetpasswordlink_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/forgetpasswordink_tewtview_login_screen_text"
            android:textColor="#F27438"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_screen_password_edittext" />

        <Button
            android:id="@+id/login_screen_login_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/orange_background"
            android:text="@string/login_button_login_screen_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_screen_forgetpasswordlink_textview" />

        <TextView
            android:id="@+id/login_screen_signup_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/signup_textview_login_screen_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/login_screen_signuplink_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:text="@string/signuplink_textview_login_screen_text"
            android:textColor="#F27438"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login_screen_signup_textview" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>