<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navbar_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan_background"
    tools:context=".ui.fragments.NavigationBarFragment">

    <ImageButton
        android:id="@+id/fragment_navbar_cart_imagebutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:contentDescription="@string/home_button_description"
        android:elevation="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/shopping_fill0_z24"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UseAppTint" />

    <ImageButton
        android:id="@+id/fragment_navbar_home_imagebutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:contentDescription="@string/profil_button_decription"
        android:elevation="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/home_fill0_24"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UseAppTint" />

    <ImageButton
        android:id="@+id/fragment_navbar_user_imagebutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:contentDescription="@string/cart_button_description"
        android:elevation="4dp"
        android:scaleType="centerInside"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/person_fill0_24"
        tools:ignore="UseAppTint" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

</androidx.constraintlayout.widget.ConstraintLayout>